--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-lg bg-white mb-4">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="#">
-                <span class="text-primary">Hello, <%= current_user.first_name %> <%= current_user.last_name %></span>
+                <span class="text-primary h5">Hello, <%= current_user.first_name %> <%= current_user.last_name %></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
